--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Contact Real Estate Agent in Fort Lauderdale, Oakland Park, Wilton Manor, Pompano Beach, Sunrise, Plantation, Hollywood">
+    <meta name="keywords" content="Fort Lauderdale, Oakland Park, Plantation, Wilton Manors, Lauderdale-By-The-Sea, Davie, Weston, Cooper City, Southwest Ranches, Sunrise, Tamarac, Hollywood, Hallandale Beach, Pembroke Pines, residential, commercial, real estate, real, estate">
+    <meta name="author" content="Matthew Consolo: Real Estate Agent in Fort Lauderdale">
 
-    <title>Clean Blog - Contact</title>
+    <title>Contact: Matthew Consolo</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -57,7 +58,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="post.html">Sample Post</a>
+                        <a href="post.html">Blog Post</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -143,7 +144,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <ul class="list-inline text-center">
                         <li>
-                            <a href="#">
+                            <a href="https://twitter.com/SouthFL_Realty">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -151,7 +152,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="https://www.facebook.com/fortlauderdalerealty/">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -159,10 +160,10 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="https://www.instagram.com/south.florida.realty/">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                                    <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
