--- a/about.html
+++ b/about.html
@@ -7,9 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="keywords" content="Fort Lauderdale, Oakland Park, Plantation, Wilton Manors, Lauderdale-By-The-Sea, Davie, Weston, Cooper City, Southwest Ranches, Sunrise, Tamarac, Hollywood, Hallandale Beach, Pembroke Pines, residential, commercial, real estate, real, estate">
+    <meta name="author" content="Matthew Consolo: Real Estate Agent in Fort Lauderdale">
 
-    <title>Matthew Consolo - About</title>
+    <title>About: Matthew Consolo</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">VP Realty Group</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,7 +58,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="post.html">Sample Post</a>
+                        <a href="post.html">Blog Post</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -78,7 +79,7 @@
                     <div class="page-heading">
                         <h1>About Me</h1>
                         <hr class="small">
-                        <span class="subheading">Get to know me a little more.</span>
+                        <span class="subheading">More than just an agent.</span>
                     </div>
                 </div>
             </div>
@@ -88,10 +89,13 @@
     <!-- Main Content -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            <!--<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">-->
+            <div class="col-lg-8 col-lg-offset-3 col-md-10 col-md-offset-1">    
                 <p>I am a real estate agent that prides myself in taking care of my clients. Communication is important in any type of relationship. In real estate that is no different. When you have an agent that is good at communicating with you throughout the whole process then you know hat is happening the whole time.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+                <p>Here are three ways to get in contact with me.</p>
+                    <li>Cell: 954-667-9781 (call or text)</li>
+                            <li>Email: <a href="mailto:matthewmconsolo@gmail.com?Subject=Hi%20There" target="_top">matthewmconsolo@gmail.com</a></li>
+                            <li>Fax: 888-206-4950</li>
             </div>
         </div>
     </div>
@@ -105,7 +109,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <ul class="list-inline text-center">
                         <li>
-                            <a href="#">
+                            <a href="https://twitter.com/SouthFL_Realty">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -113,7 +117,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="https://www.facebook.com/fortlauderdalerealty/">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -121,15 +125,15 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="https://www.instagram.com/south.florida.realty/">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                                    <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="copyright text-muted">Copyright &copy; VP Realty Group, Inc. 2016</p>
                 </div>
             </div>
         </div>
