--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Contact Real Estate Agent in Fort Lauderdale, Oakland Park, Wilton Manor, Pompano Beach, Sunrise, Plantation, Hollywood">
     <meta name="keywords" content="Fort Lauderdale, Oakland Park, Plantation, Wilton Manors, Lauderdale-By-The-Sea, Davie, Weston, Cooper City, Southwest Ranches, Sunrise, Tamarac, Hollywood, Hallandale Beach, Pembroke Pines, residential, commercial, real estate, real, estate">
-    <meta name="author" content="Matthew Consolo: Real Estate Agent in Fort Lauderdale">
+    <meta name="author" content="Matthew Consolo | Realtor | Fort Lauderdale">
 
     <title>Contact: Matthew Consolo</title>
 
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">VP Realty Group</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
