--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="keywords" content="Fort Lauderdale, Oakland Park, Plantation, Wilton Manors, Lauderdale-By-The-Sea, Davie, Weston, Cooper City, Southwest Ranches, Sunrise, Tamarac, Hollywood, Hallandale Beach, Pembroke Pines, residential, commercial, real estate, real, estate">
-    <meta name="author" content="Matthew Consolo: Real Estate Agent in Fort Lauderdale">
+    <meta name="author" content="Matthew Consolo | Realtor | Fort Lauderdale">
 
     <title>About: Matthew Consolo</title>
 
